--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite:
-  path_provider:
+  path_provider: ^2.0.1
+  stellar_flutter_sdk: ^0.8.0
+  loading_animations: ^2.1.0
+  provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
